[gd_scene load_steps=12 format=3 uid="uid://dhnushyfpj2pj"]

[ext_resource type="Script" path="res://shared/scripts/control.gd" id="1_okofb"]
[ext_resource type="Texture2D" uid="uid://b3r57haeynjbi" path="res://resource/assets/backgrounds/menu.png" id="2_qk6xj"]
[ext_resource type="Texture2D" uid="uid://cvnhppkab8m24" path="res://resource/assets/backgrounds/logo.svg" id="3_ad6rh"]
[ext_resource type="Texture2D" uid="uid://brkdkfixklm1b" path="res://resource/assets/skins/PlayerOriginal.png" id="3_ffx1c"]
[ext_resource type="Theme" uid="uid://ccdfqfq2wd0rn" path="res://resource/themes/button_theme.tres" id="3_n062c"]
[ext_resource type="Texture2D" uid="uid://ccvywkm13x3bx" path="res://resource/assets/ui/setting_icon.png" id="5_c1l1o"]
[ext_resource type="Texture2D" uid="uid://dnnnsdipsm623" path="res://resource/assets/ui/edit.png" id="6_o1tlt"]
[ext_resource type="AudioStream" uid="uid://cst4jqbow5fxc" path="res://resource/media/music/POL-king-of-coins-short.wav" id="6_ofkqq"]
[ext_resource type="PackedScene" uid="uid://b8oa1upccw513" path="res://shared/scenes/settings_menu.tscn" id="7_6tcvn"]
[ext_resource type="PackedScene" uid="uid://8kd2tm10b6n1" path="res://shared/scenes/name_manager.tscn" id="9_7scq0"]
[ext_resource type="PackedScene" uid="uid://dmkqbbawo0tby" path="res://shared/scenes/terms_and_conditions.tscn" id="9_114mq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_okofb")
metadata/_edit_horizontal_guides_ = [648.0, 625.0, 25.0]
metadata/_edit_vertical_guides_ = [1125.0, 25.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qk6xj")
expand_mode = 2

[node name="VBoxContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.5
offset_right = 292.5
offset_bottom = 88.0
grow_horizontal = 2
theme_override_constants/margin_top = 128

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "TASTES DISCOVERY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_ad6rh")

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -181.0
offset_top = -78.0
offset_right = -27.0
offset_bottom = -23.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_n062c")
theme_override_font_sizes/font_size = 32
text = "INICIAR"

[node name="Skin" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -51.0
offset_right = 93.0
offset_bottom = 52.0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Skin"]
position = Vector2(34, 42.5)
scale = Vector2(2, 2)
texture = ExtResource("3_ffx1c")
hframes = 13
vframes = 21
frame = 130

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 25.0
offset_top = 25.0
offset_right = 75.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_n062c")
theme_override_font_sizes/font_size = 32
icon = ExtResource("5_c1l1o")
icon_alignment = 1

[node name="NameView" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -362.0
offset_top = 25.0
offset_right = -29.0
offset_bottom = 77.0
grow_horizontal = 0

[node name="PanelContainer" type="PanelContainer" parent="NameView"]
layout_mode = 1
offset_right = 282.0
offset_bottom = 51.0

[node name="MarginContainer" type="MarginContainer" parent="NameView/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="Name" type="Label" parent="NameView/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Jugador"
horizontal_alignment = 1

[node name="EditName" type="Button" parent="NameView"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -1.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_n062c")
text = "           "
icon = ExtResource("6_o1tlt")
icon_alignment = 1

[node name="NameManager" parent="." instance=ExtResource("9_7scq0")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ofkqq")
volume_db = -10.0
bus = &"Music"

[node name="SettingsMenu" parent="." instance=ExtResource("7_6tcvn")]
visible = false
layout_mode = 1

[node name="TermsAndConditions" parent="." instance=ExtResource("9_114mq")]
layout_mode = 1

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Skin" to="." method="_on_skin_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="NameView/EditName" to="." method="_on_edit_name_pressed"]
[connection signal="player_renamed" from="NameManager" to="." method="_on_name_manager_player_renamed"]
[connection signal="accepted" from="TermsAndConditions" to="." method="_on_terms_and_conditions_accepted"]
